crates/ars-components/src/utility/snapshots/ars_components__utility__download_trigger__tests__download_trigger_root_mime_type.snap
---
source: crates/ars-components/src/utility/download_trigger.rs
expression: "snapshot_attrs(&api(Props::new().id(\"dl-mt\").href(\"/export.csv\").mime_type(\"text/csv\"),).root_attrs(),)"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "download-trigger",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Download file",
            ),
        ),
        (
            Id,
            String(
                "dl-mt",
            ),
        ),
        (
            Type,
            String(
                "text/csv",
            ),
        ),
        (
            Download,
            Bool(
                true,
            ),
        ),
        (
            Href,
            String(
                "/export.csv",
            ),
        ),
    ],
    styles: [],
}
